added manual links

--- a/content/_posts/2016-10-28-release-3.2.10.md
+++ b/content/_posts/2016-10-28-release-3.2.10.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 date: "2016-10-28"
-title: First release
+title: First Release
 description: details of the first release of Rya (Incubating)
 version: 3.2.10
 fullVersion: rya-incubating-3.2.10
@@ -23,6 +23,7 @@ This is Rya's first release, version {{ page.version }}.  It is available as a s
 - [Source download from Github]({{ page.githubRelease }})
 - [Release Tag in Github](https://github.com/apache/incubator-rya/commit/{{ page.sha }})
 - [Release notes]({{ page.releaseNotes }})
+- [Central repository for Maven and other dependency managers](https://search.maven.org/#search%7Cga%7C1%7Cg%3A%22org.apache.rya%22)
 
 [Verify](http://www.apache.org/dyn/closer.cgi#verify)
 using the corresponding *pgp* signature (using the committer file in
@@ -38,3 +39,9 @@ succeed.
 
 For security, hash and signature files are always hosted at
 [Apache](https://www.apache.org/dist).
+
+Next steps:
+- [Building from Source](https://github.com/apache/incubator-rya/blob/{{ page.sha }}/extras/rya.manual/src/site/markdown/build-source.md)
+- [Quick Start](https://github.com/apache/incubator-rya/blob/{{ page.sha }}/extras/rya.manual/src/site/markdown/quickstart.md)
+- [Typical First Steps](https://github.com/apache/incubator-rya/blob/{{ page.sha }}/extras/rya.manual/src/site/markdown/sm-firststeps.md)
+- [Manual -- includes documents above](https://github.com/apache/incubator-rya/blob/{{ page.sha }}/extras/rya.manual/src/site/markdown/index.md)
