--- a/content/_posts/2016-10-28-release-3.2.10.md
+++ b/content/_posts/2016-10-28-release-3.2.10.md
@@ -6,30 +6,34 @@ description: details of the first release of Rya (Incubating)
 version: 3.2.10
 fullVersion: rya-incubating-3.2.10
 filename: rya-project-3.2.10-incubating-source-release
-githubRelease: https://github.com/apache/incubator-rya/releases/tag/rel%2Frya-incubating-3.2.10
-apacheRelease: https://dist.apache.org/repos/dist/release/incubator/rya/rya-incubating-3.2.10/
 releaseNotes: https://issues.apache.org/jira/secure/ReleaseNote.jspa?version=12334209&styleName=Html&projectId=12319020
 categories: [release]
 tag: v3.2.10
-sha: 66d8b7f
 ---
 {% comment %}
 Some of the variables above are used on the summary page that iterates through posts where catagories=release.
-{% endcomment %}
+{% endcomment %}{% capture apacheDistMirror %}http://www.apache.org/dyn/closer.lua/{{ site.data.project.incubator_slash_name }}/{{ page.fullVersion }}{% endcapture %}
+{% capture d %}https://dist.apache.org/repos/dist/release/{{ site.data.project.incubator_slash_name }}/{{ page.fullVersion }}{% endcapture %}
+
+
+
+
 
 This is Rya's first release, version {{ page.version }}.  It is available as a source code download:
 
-- [Source download from Apache]({{ page.apacheRelease }})
-- [Source download from Github]({{ page.githubRelease }})
-- [Release Tag in Github](https://github.com/apache/incubator-rya/commit/{{ page.sha }})
+- [Source download from Apache]({{ apacheDistMirror }}/{{ page.filename }}.zip)
+- Verify: {% comment %}
+{% endcomment %} [pgp]( {{ d }}/{{ page.filename }}.zip.asc ){% comment %}
+{% endcomment %} [md5]( {{ d }}/{{ page.filename }}.zip.md5 ){% comment %}
+{% endcomment %} [sha1]({{ d }}/{{ page.filename }}.zip.sha1)
 - [Release notes]({{ page.releaseNotes }})
 - [Central repository for Maven and other dependency managers](https://search.maven.org/#search%7Cga%7C1%7Cg%3A%22org.apache.rya%22)
 
 [Verify](http://www.apache.org/dyn/closer.cgi#verify)
 using the corresponding *pgp* signature (using the committer file in
 [KEYS](http://www.apache.org/dist/{{ site.data.project.incubator_slash_name }}/KEYS)).
-If you cannot do that, the *md5* hash file may be used to check that the
-download has completed OK.
+If you cannot do that, the *md5* or *sha1* hash file may be used to check that the
+download has completed okay.
 
 For fast downloads, current source distributions are hosted on mirror servers;
 older source distributions are in the
@@ -38,7 +42,7 @@ If a download from a mirror fails, retry, and the second download will likely
 succeed.
 
 For security, hash and signature files are always hosted at
-[Apache](https://www.apache.org/dist).
+[Apache](https://www.apache.org/dist/{{ site.data.project.incubator_slash_name }}).
 
 Next steps:
 - [Building from Source](https://github.com/apache/incubator-rya/blob/{{ page.sha }}/extras/rya.manual/src/site/markdown/build-source.md)
