fixed manual links

--- a/content/_posts/2016-10-28-release-3.2.10.md
+++ b/content/_posts/2016-10-28-release-3.2.10.md
@@ -45,7 +45,7 @@ For security, hash and signature files are always hosted at
 [Apache](https://www.apache.org/dist/{{ site.data.project.incubator_slash_name }}).
 
 Next steps:
-- [Building from Source](https://github.com/apache/incubator-rya/blob/{{ page.sha }}/extras/rya.manual/src/site/markdown/build-source.md)
-- [Quick Start](https://github.com/apache/incubator-rya/blob/{{ page.sha }}/extras/rya.manual/src/site/markdown/quickstart.md)
-- [Typical First Steps](https://github.com/apache/incubator-rya/blob/{{ page.sha }}/extras/rya.manual/src/site/markdown/sm-firststeps.md)
-- [Manual -- includes documents above](https://github.com/apache/incubator-rya/blob/{{ page.sha }}/extras/rya.manual/src/site/markdown/index.md)
+- [Building from Source](https://github.com/apache/incubator-rya/blob/rel/{{ page.fullVersion }}/extras/rya.manual/src/site/markdown/build-source.md)
+- [Quick Start](https://github.com/apache/incubator-rya/blob/rel/{{ page.fullVersion }}/extras/rya.manual/src/site/markdown/quickstart.md)
+- [Typical First Steps](https://github.com/apache/incubator-rya/blob/rel/{{ page.fullVersion }}/extras/rya.manual/src/site/markdown/sm-firststeps.md)
+- [Manual -- includes documents above](https://github.com/apache/incubator-rya/blob/rel/{{ page.fullVersion }}/extras/rya.manual/src/site/markdown/index.md)
