link to https://www.apache.org/dist/ for hashes and sigs instead of dist.apache.org

--- a/content/_posts/2018-03-04-release-3.2.12.md
+++ b/content/_posts/2018-03-04-release-3.2.12.md
@@ -12,7 +12,7 @@ categories: [release]
 {% comment %}
 Some of the variables above are used on the summary page that iterates through posts where catagories=release.
 {% endcomment %}{% capture apacheDistMirror %}http://www.apache.org/dyn/closer.lua/{{ site.data.project.incubator_slash_name }}/{{ page.fullVersion }}{% endcapture %}
-{% capture d %}https://dist.apache.org/repos/dist/release/{{ site.data.project.incubator_slash_name }}/{{ page.fullVersion }}{% endcapture %}
+{% capture d %}https://www.apache.org/dist/{{ site.data.project.incubator_slash_name }}/{{ page.fullVersion }}{% endcapture %}
 
 
 
@@ -31,7 +31,7 @@ This is Rya's third Apache release, version {{ page.version }}.  It is available
 
 [Verify](http://www.apache.org/dyn/closer.cgi#verify)
 using the corresponding *pgp* signature (using the committer file in
-[KEYS](http://www.apache.org/dist/{{ site.data.project.incubator_slash_name }}/KEYS)).
+[KEYS](https://www.apache.org/dist/{{ site.data.project.incubator_slash_name }}/KEYS)).
 If you cannot do that, the *md5* or *sha1* hash file may be used to check that the
 download has completed okay.
 
