removed md5 and sha1 files from download page, updated copyright year in footer

--- a/content/_posts/2019-07-27-release-4.0.0.md
+++ b/content/_posts/2019-07-27-release-4.0.0.md
@@ -18,13 +18,11 @@ Some of the variables above are used on the summary page that iterates through p
 
 
 
-This is Rya's third Apache release, version {{ page.version }}.  It is available as a source code download:
+This is Rya's fourth Apache release, version {{ page.version }}.  It is available as a source code download:
 
 - [Source download from Apache]({{ apacheDistMirror }}/{{ page.filename }}.zip)
 - Verify: {% comment %}
 {% endcomment %} [pgp]( {{ d }}/{{ page.filename }}.zip.asc ){% comment %}
-{% endcomment %} [md5]( {{ d }}/{{ page.filename }}.zip.md5 ){% comment %}
-{% endcomment %} [sha1]({{ d }}/{{ page.filename }}.zip.sha1){% comment %}
 {% endcomment %} [sha512]({{ d }}/{{ page.filename }}.zip.sha512)
 - [Release notes]({{ page.releaseNotes | liquify }})
 - [Central repository for Maven and other dependency managers](https://search.maven.org/#search%7Cga%7C1%7Cg%3A%22org.apache.rya%22)
@@ -32,7 +30,7 @@ This is Rya's third Apache release, version {{ page.version }}.  It is available
 [Verify](http://www.apache.org/dyn/closer.cgi#verify)
 using the corresponding *pgp* signature (using the committer file in
 [KEYS](https://www.apache.org/dist/{{ site.data.project.incubator_slash_name }}/KEYS)).
-If you cannot do that, the *md5* or *sha1* hash file may be used to check that the
+If you cannot do that, the *sha512* hash file may be used to check that the
 download has completed okay.
 
 For fast downloads, current source distributions are hosted on mirror servers;
