--- a/content/_posts/2016-10-28-release-3.2.10.md
+++ b/content/_posts/2016-10-28-release-3.2.10.md
@@ -12,7 +12,7 @@ tag: v3.2.10
 ---
 {% comment %}
 Some of the variables above are used on the summary page that iterates through posts where catagories=release.
-{% endcomment %}{% capture apacheDistMirror %}http://www.apache.org/dyn/closer.lua/{{ site.data.project.incubator_slash_name }}/{{ page.fullVersion }}{% endcapture %}
+{% endcomment %}{% capture apacheDistMirror %}https://www.apache.org/dyn/closer.lua/{{ site.data.project.incubator_slash_name }}/{{ page.fullVersion }}{% endcapture %}
 {% capture d %}https://www.apache.org/dist/{{ site.data.project.incubator_slash_name }}/{{ page.fullVersion }}{% endcapture %}
 
 
@@ -29,7 +29,7 @@ This is Rya's first release, version {{ page.version }}.  It is available as a s
 - [Release notes]({{ page.releaseNotes }})
 - [Central repository for Maven and other dependency managers](https://search.maven.org/#search%7Cga%7C1%7Cg%3A%22org.apache.rya%22)
 
-[Verify](http://www.apache.org/dyn/closer.cgi#verify)
+[Verify](https://www.apache.org/dyn/closer.cgi#verify)
 using the corresponding *pgp* signature (using the committer file in
 [KEYS](https://www.apache.org/dist/{{ site.data.project.incubator_slash_name }}/KEYS)).
 If you cannot do that, the *md5* or *sha1* hash file may be used to check that the
@@ -37,7 +37,7 @@ download has completed okay.
 
 For fast downloads, current source distributions are hosted on mirror servers;
 older source distributions are in the
-[archive](http://archive.apache.org/dist/incubator/{{ site.data.project.unix_name }}/).
+[archive](https://archive.apache.org/dist/incubator/{{ site.data.project.unix_name }}/).
 If a download from a mirror fails, retry, and the second download will likely
 succeed.
 
