--- a/content/_posts/2019-07-27-release-4.0.0.md
+++ b/content/_posts/2019-07-27-release-4.0.0.md
@@ -11,7 +11,7 @@ categories: [release]
 ---
 {% comment %}
 Some of the variables above are used on the summary page that iterates through posts where catagories=release.
-{% endcomment %}{% capture apacheDistMirror %}http://www.apache.org/dyn/closer.lua/{{ site.data.project.incubator_slash_name }}/{{ page.fullVersion }}{% endcapture %}
+{% endcomment %}{% capture apacheDistMirror %}https://www.apache.org/dyn/closer.lua/{{ site.data.project.incubator_slash_name }}/{{ page.fullVersion }}{% endcapture %}
 {% capture d %}https://www.apache.org/dist/{{ site.data.project.incubator_slash_name }}/{{ page.fullVersion }}{% endcapture %}
 
 
@@ -27,7 +27,7 @@ This is Rya's fourth Apache release, version {{ page.version }}.  It is availabl
 - [Release notes]({{ page.releaseNotes | liquify }})
 - [Central repository for Maven and other dependency managers](https://search.maven.org/#search%7Cga%7C1%7Cg%3A%22org.apache.rya%22)
 
-[Verify](http://www.apache.org/dyn/closer.cgi#verify)
+[Verify](https://www.apache.org/dyn/closer.cgi#verify)
 using the corresponding *pgp* signature (using the committer file in
 [KEYS](https://www.apache.org/dist/{{ site.data.project.incubator_slash_name }}/KEYS)).
 If you cannot do that, the *sha512* hash file may be used to check that the
@@ -35,7 +35,7 @@ download has completed okay.
 
 For fast downloads, current source distributions are hosted on mirror servers;
 older source distributions are in the
-[archive](http://archive.apache.org/dist/incubator/{{ site.data.project.unix_name }}/).
+[archive](https://archive.apache.org/dist/incubator/{{ site.data.project.unix_name }}/).
 If a download from a mirror fails, retry, and the second download will likely
 succeed.
 
